/*
 * $Id: ChangeLog,v 1.1403 2015-03-01 18:33:10 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2015-03-01 16:32 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entry.

2015-03-01 16:30 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_textbox.prg
     * Removed line length limit (1024) in TText:GetLine().

2015-03-01 14:21 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_msgbox.prg
     ! Harbour 3.2 compiler warning in _Dummy().

2015-03-01 14:04 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_textbox.prg
     ! MinGW compiler warning in TTEXT_GETLINE.

2015-02-28 22:17 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ide/fmgs/tabprop.fmg
   * ide/prgs/formedit.prg
     + TAB's DELAYMSGS clause.

2015-02-28 21:34 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_xbrowse.prg
     * Removed unnecessary call to ProcessMessage() at the end of ::Visible.
   * source/h_textbox.prg
     * Use ::lVisible as return value of ::Visible instead of
       ::Super:Visible.
   * source/h_windows.prg
     + DATA TWindow:lProcMsgsOnVisible.
     * TWindow:Visible checks TWindow:lProcMsgsOnVisible before calling
       ProcessMessage() after changing object's visibility.
     + Parameter lNoProc to method ParentDefaults of Twindow.
       The method now sets ::lProcMsgsOnVisible using the passed value or
       to the container's value or to the parent's value.
   * source/h_form.prg
     * TForm:Visible checks TWindow:lProcMsgsOnVisible before calling
       ProcessMessage() after changing object's visibility.
   * source/h_controlmisc.prg
     + Parameter lNoProc to method SetForm of TForm. This parameter
       changes ::lProcMsgsOnVisible via Twindow:ParentDefaults.
   * include/i_tab.ch