@@ -1,5 +1,5 @@
 /*
- * $Id: h_picture.prg,v 1.17 2014-09-22 02:35:42 fyurisich Exp $
+ * $Id: h_picture.prg,v 1.18 2015-03-03 21:21:38 fyurisich Exp $
  */
 /*
  * ooHG source code:
@@ -147,7 +147,7 @@ Return Self
 *-----------------------------------------------------------------------------*
 METHOD Picture( cPicture, lNoRepaint ) CLASS TPicture
 *-----------------------------------------------------------------------------*
-LOCAL nAttrib, aPictSize, lGDIp
+LOCAL nAttrib, aPictSize
    IF VALTYPE( cPicture ) $ "CM"
       DeleteObject( ::hImage )
       ::cPicture := cPicture
@@ -168,15 +168,8 @@ LOCAL nAttrib, aPictSize, lGDIp
          nAttrib := LR_CREATEDIBSECTION
       ENDIF
 
-      // GDI+ crashes on call to GdipCreateHBITMAPFromBitmap in _OOHG_GDIPLoadPicture()
-      IF ".EMF" $ Upper( Right( cPicture, 4 ) )
-         lGDIp := _OOHG_SetGDIP( .F. )
-      ENDIF
       // load image at full size
       ::hImage := _OOHG_BitmapFromFile( Self, cPicture, nAttrib, .F. )
-      IF ".EMF" $ Upper( Right( cPicture, 4 ) )
-         _OOHG_SetGDIP( lGDIp )
-      ENDIF
       If ! HB_IsLogical( lNoRepaint ) .OR. ! lNoRepaint
          ::RePaint()
       EndIf
